# PiDeck

./: .gitignore  LICENSE  README.md  requirements.txt  showHide.js  style.css  ui_model.html
Documentation/: documentation.html
docs/: index.html  style.css  style1.css  style2.css
driver/: README.md  change_volume.py  connect_server_run.sh  driver_server_run.sh  keyboard_actions.py  lan_server.py  main.py  math_functions.py  prog_init.py  request_processor.py  supported_actions.md  toast.ps1  wsgi.py  wsgi_waitress.py
driver/driver/: __init__.py  dialogText.ps1  driver.py
driver/examples/: lan_request_test.py
driver_rewrite/: main.py
driver_rewrite/driver/: driver.py
install/: win_install.bat  win_install.cmd  win_uninstall.cmd
install/common_assets/: raspimote_ca.pem
install/deb_assets/: run.dart  run_ui.dart
install/deb_assets/run/: Cargo.toml
install/deb_assets/run/src/: main.rs
install/deb_assets/run_ui/: Cargo.toml
install/deb_assets/run_ui/src/: main.rs
old_driver/: driver_server_run_gunicorn.sh  keyboard_actions.py  lan_server.py  math_functions.py  prog_init.py  request_processor.py  supported_actions.md
pi/: cert.pem  connect_server.py  connect_server_test.py  example.py  identify_usb_device.py  key.pem  main.py  main_template.py  template.py  test_get_keyboard_linux.py  test_getèkeyboard_linux.py
pi/pideck/: pi.py  (+2 more)
raspberrypi/: main.py  main_template.py
temp/: xboxone_controller.py
ui/: README.md  initElements.js  saveButton.js  showHide.js  style.css  testserver.py  ui_model.html
utility/: identify_usb_device.py
(+91 files in other folders)
